--- a/gb/23/3/2/n13941601.md
+++ b/gb/23/3/2/n13941601.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>爱心狗帮助蹒跚学步的孩子 保护其免受危险</h2>
-<a href="https://d22owz1tif1d5u.cloudfront.net/K5kWRHu2e"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/03/id13941604-Haley-i-1200x605-600x400.jpg" />///image2=
 <h6></h6>
 <hr>
-	<p>【大纪元2023年03月02日讯】（英文大纪元记者LOUISE CHAMBERS报导／徐明宇编译）一只可爱、充满<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%88%B1%E5%BF%83.md#1">爱心</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8B%97.md#1">狗</a>狗使命必达，总是在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B0%8F%E4%B8%BB%E4%BA%BA.md#1">小主人</a>攀爬楼梯、下楼或外出时<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4.md#1">保护</a>她。主人表示，这只小狗和他们的女儿之间的纽带是“如此特别”。</p>
+	<p>【大纪元2023年03月02日讯】（英文大纪元记者LOUISE CHAMBERS报导／徐明宇编译）一只可爱、充满爱心的狗狗使命必达，总是在小主人攀爬楼梯、下楼或外出时保护她。主人表示，这只小狗和他们的女儿之间的纽带是“如此特别”。</p>
 <p>今年25岁的海莉（Haley）和28岁的管道工丈夫道尔顿?肯纳斯顿（Dalton Kenaston）一起居住在美国俄勒冈州威拉米特山谷。自2019年结婚以来，这对夫妇育有名叫埃弗利（Everly）的幼儿，并预计在六月份迎来一名女婴。他们还有一只将近两岁的纯种粗毛牧羊犬，名叫杜克（Duke）。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.10.13.png" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.10.13.png" width="450" b="611" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.10.13.png" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.10.13.png" width="450" b="611" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
 <p>由于肯纳斯顿一家住在被森林环绕的山地农场中，海莉表示有很多事情她必须让女儿远离危险。然而，知道杜克一直留意着埃弗利，这是“非常幸福的一件事情”。</p>
 <p>“杜克阻止埃弗利上下楼梯的次数比我能数的还要多。”海莉告诉《大纪元时报》，“甚至只是一些小山坡或悬崖，它总是紧贴着她，把自己挡在她和危险之间。”</p>
-<p>去年看到这一幕，海莉拿出手机拍下了杜克<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4.md#1">保护</a>埃弗利的视频，并在Instagram上分享，视频迅速走红。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.12.25.png" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.12.25.png" width="450" b="665" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
-<p>“我看到女儿开始往楼梯走”，海莉说，“我只在她附近，而且知道杜克会保护她。它完美地展示了它的保护行为！我分享这个视频是因为有些人可能不会相信……我想让大家知道杜克有多特别、聪明和有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%88%B1%E5%BF%83.md#1">爱心</a>，还有它和我女儿之间有多深的纽带……我没有想到这个视频会走红。”</p>
-<p>海莉很高兴看到有很多人喜欢这个视频并留言。其中许多人甚至分享了他们与自己<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8B%97.md#1">狗</a>的经历。</p>
+<p>去年看到这一幕，海莉拿出手机拍下了杜克保护埃弗利的视频，并在Instagram上分享，视频迅速走红。</p>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.12.25.png" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/Screenshot-2023-01-14-at-10.12.25.png" width="450" b="665" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
+<p>“我看到女儿开始往楼梯走”，海莉说，“我只在她附近，而且知道杜克会保护她。它完美地展示了它的保护行为！我分享这个视频是因为有些人可能不会相信……我想让大家知道杜克有多特别、聪明和有爱心，还有它和我女儿之间有多深的纽带……我没有想到这个视频会走红。”</p>
+<p>海莉很高兴看到有很多人喜欢这个视频并留言。其中许多人甚至分享了他们与自己狗的经历。</p>
 <p>“让其他人感到开心并想到他们自己的狗，这让我非常高兴。”海莉说道。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://d22owz1tif1d5u.cloudfront.net/K5kWRHu2e"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/7a3f87c7-e167-4436-b0fb-f617751ff96f?r=16x9&amp;d=15" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
+<p style="text-align: center;"><a src=""></a><a href="https://d282b678eon3c.cloudfront.net/F6cvpehFi"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/7a3f87c7-e167-4436-b0fb-f617751ff96f?r=16x9&amp;d=15" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
 （Courtesy of Haley Kenaston）</p>
 <p>然而，海莉注意到自从埃弗利长大了一点后，杜克的保护行为有所减弱。</p>
 <p>“现在她已经长到足够大了，有能力上下楼梯了，它会让她接近楼梯，自己上下楼梯。”海莉说。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/20220922_110725-01.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/20220922_110725-01.jpeg" width="450" b="600" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/20220922_110725-01.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/20220922_110725-01.jpeg" width="450" b="600" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
 <p>埃弗利在2020年4月早产了两个月，出生时只有3磅（约1.3公斤）。父母认为她是一个“完全的奇迹”。作为一个农场女孩，埃弗利喜欢待在家庭农场外面，进行各种各样的冒险。</p>
 <p>她与杜克之间也有着不可思议的纽带，海莉和道尔顿在杜克还是一只小狗时就收养了它。</p>
 <p>“当我们去看饲养员有哪些小狗时，它就很特别，一看到它，我们就知道它是我们要收养的那只。”海莉说，“它是我这辈子养过的最好的狗，我曾经养过很多优秀的狗。”</p>
 <p>由于家庭位于山上，杜克视很多动物为一种威胁。因此，它总是确保自己在家人的前面，以吓走任何威胁的因素。</p>
 <p>“如果我女儿跌倒了（或者其他孩子），开始哭泣时，它就会跑过去，开始亲吻他们。”海莉说，“它知道他们心情不好时，会试图让他们开心起来。”</p>
-<figure style="width: 592px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/IMG_7163-01.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/IMG_7163-01.jpeg" width="592" b="467" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
+<figure style="width: 592px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/IMG_7163-01.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/IMG_7163-01.jpeg" width="592" b="467" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
 <p>埃弗利与杜克是见面就开心，每当女儿出来玩，杜克总会“蹭”她一下，并且很喜欢当保姆。“他们喜欢一起奔跑或玩拔河——杜克很温柔——我女儿玩得非常开心。它每天都能让她笑。” 海莉说。</p>
 <p>这对小伙伴见面就互相点亮。女儿有一堆毛绒玩具狗，每一个都叫杜克。她无论去哪里都会带一个杜克玩具。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/20210709_185956.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/20210709_185956.jpg" width="450" b="898" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/01/14/20210709_185956.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/01/14/20210709_185956.jpg" width="450" b="898" /></a><figcaption class="wp-caption-text">（Courtesy of Haley Kenaston）</figcaption></figure>
 <p>海莉在威拉米特山谷的家庭马训练和繁殖农场中长大。两年前，她和道尔顿转变为自给自足的生活方式。这对夫妇购买了一座完美的房子开始他们的新生活。</p>
 <p>此后，他们一直在努力建造花园、围栏和动物住所。他们目前有鸡和马，但计划到年底增加一个温室和一头产奶牛。他们的目标是通过完全自给自足来做好准备。</p>
 <p>“我们一直想知道我们的食物来自何处，过更健康的生活。”海莉说，“我们是新手，所以我们仍在学习……自己种植食物很辛苦，但非常值得。”</p>
@@ -36,44 +36,34 @@
 <p>责任编辑：韩玉#</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/26/n12712859.md#1">大火中奋力叫醒小主人 两宠物狗不幸死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/15/n13647716.md#1">组图：可爱小狗坚持要和小主人一起拍成长照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/25/n13832419.md#1">组图：忠诚狗每晚检查小主人 以确保其无恙</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/26/n12712859.md#1">大火中奋力叫醒小主人 两宠物狗不幸死亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/15/n13647716.md#1">组图：可爱小狗坚持要和小主人一起拍成长照</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/25/n13832419.md#1">组图：忠诚狗每晚检查小主人 以确保其无恙</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/26/n2976689.md#1" target="_blank">鲜为人知的马克思之六：信神的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014437.md#1">古代不贺夏至  节俗中蕴含什么深机？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013202.md#1">端午节九大风俗 内涵与历史渊源知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021250.md#1">【未解之谜】UFO美国赌城坠毁 外星人出现了？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021396.md#1">心理学家：成功夫妻争吵时遵循的8条原则</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/10/n14013640.md#1">凡间异事破迷雾 苍宇圣王度红尘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14022210.md#1">【菁英论坛】经济下滑 人民币下跌深不见底</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/25/n14022506.md#1">【时事军事】乌克兰战争结果可能出人意料</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14022191.md#1">【远见快评】“泰坦”内爆 沉没悲剧重演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14022079.md#1">岳山：普京亲信兵变震动中南海？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14022007.md#1">【更新】瓦格纳首领下令停止挺进莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14021834.md#1">布林肯访华 随行记者记录下的镜头外场景</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021703.md#1">记者会上讲港式英语 郭富城获赞“尊重场合”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021766.md#1">徐静蕾晒疑定居美国近照 亲自回应生娃传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021413.md#1">为一碗“古早味碗粿” 郁方录实境秀险落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021725.md#1">泪送亡母 65岁陈凯伦拖癌体：演艺圈做够了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021441.md#1">《不可能7》156分钟 剪辑师：观众不会想上厕所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015280.md#1">研究：一个坐着就可进行的简单动作可降血糖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018251.md#1">眼睛干涩酸胀怎么办？快来试试这几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14021882.md#1">美国房市低迷 建筑商为何加紧盖房？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/25/n14022328.md#1">如何判断手机是否被骇客入侵？怎样预防？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021565.md#1">全球14种美味炸鸡逐一数 你爱吃哪种？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/2/n13941601.htm">爱心狗帮助蹒跚学步的孩子 保护其免受危险</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941601.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/3/2/n13941601.htm">爱心狗帮助蹒跚学步的孩子 保护其免受危险</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/3/2/n13941601.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
